GNOME Bugzilla – Bug 694323
Language list contents are not centered
Last modified: 2013-02-26 14:07:03 UTC
See attached screenshot - the last item (the dots) are centered, but the other languages in the list are not.
Created attachment 236994 [details] screenshot
Created attachment 236998 [details] [review] common: fix language chooser to be centered
Created attachment 236999 [details] [review] region: make format chooser centered
Review of attachment 236998 [details] [review]: Looks good otherwise. ::: panels/common/cc-language-chooser.c @@ +150,1 @@ gtk_image_set_from_icon_name (GTK_IMAGE (check), "object-select-symbolic", GTK_ICON_SIZE_MENU); You could just always set it as it would be hidden in the normal case.
Review of attachment 236999 [details] [review]: ::: panels/region/cc-format-chooser.c @@ +238,2 @@ check = gtk_image_new (); + gtk_widget_set_no_show_all (check, TRUE); You could set the icon name here, as you're hiding it when not selected.
Created attachment 237372 [details] [review] common: fix language chooser to be centered
Created attachment 237373 [details] [review] region: make format chooser centered