common: Fix language chooser to be centered

https://bugzilla.gnome.org/show_bug.cgi?id=694323